working on facials

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: lightgray; margin: 0;">
+  <body style="background-color: #d1d6c6; margin: 0;">
     <main>
       <div class="topBar">
         <a href="tel:5869326300" class="smallContact">
-          <i class="fa fa-phone" style="padding-top: 15px;" aria-hidden="true"></i> 
+          <i class="fa fa-phone" aria-hidden="true"></i> 
           (586) 932-6300 &emsp;
         </a>
         <a class="smallContact" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
+        <!-- <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a> -->
         <div class="header-right">
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
@@ -32,7 +32,7 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: grey;">
+      <div class="introIMG" style="background-color: #6f7065;">
         <h1 class="introText" style="color: #68b701;">About Us</h1>
       </div>
       
@@ -47,6 +47,8 @@
       <div class="policy">
         <h3 class="titleCard">Policies</h3>
         <ul style="list-style-type:disc;">
+          
+          <li style="color: red;">DUE TO RELIGIOUS RESTRICTIONS BODY WAXING IS LIMITED TO FEMALE CLIENTS ONLY, men are still able to receive facial waxing and threading services</li>
           <li>We do take walk-ins, but to guarantee your service is done in time please call and reserve an appointment ahead of time</li>
           <li>Please notify us of any allergies or sensitivities to aromas or ingredients during scheduling or at time of service</li>
           <li>Please arrive with clean skin, clear from any oils, makeup, or lotions for the best experience</li>
