--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: lightgray; margin: 0;">
+  <body style="background-color: #d1d6c6; margin: 0;"> 
+    <!-- #d7e1c9 -->
+    <!-- #b6bbab -->
     <main>
       <div class="topBar">
         <a href="tel:5869326300" class="smallContact">
-          <i class="fa fa-phone" style="padding-top: 15px;" aria-hidden="true"></i> 
-          (586) 932-6300
+          <i class="fa fa-phone" aria-hidden="true"></i> 
+          (586) 932-6300 &emsp;
         </a>
         <a class="smallContact" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">
           <i class="fa fa-building" aria-hidden="true"></i>
@@ -22,7 +24,7 @@
         </a>
       </div>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
+        <!-- <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a> -->
         <div class="header-right">
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
@@ -32,14 +34,14 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="fixedHeader" style="">
-        <div style="padding-top: 80px;">
+      <div class="fixedHeader">
+        <div style="padding-top: 30px;">
           <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 70%;">
         </div>
       </div>
       <h2 class="titleCard">About Us</h2>
       <div class="aboutus">
-        <div class="briefIntro" style="text-align: center; min-height: 300px;">
+        <div class="briefIntro" style="min-height: 300px;">
           <h3 style="font-size: 25px; padding-top: 30px;">Welcome to Amazing Brows & Beauty!</h3>
           <p style="display: inline-block; max-width: 600px;">
             We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more.
@@ -51,10 +53,10 @@
           </a></p>
         </div>
         <div>
-          <img class="aboutus-image" src="/images/PHOTO-2024-01-09-11-33-41.jpg" alt="Amazing Brows & Beauty">
+          <img class="aboutus-image" style="padding-top: 50px;" src="/images/PHOTO-2024-01-09-11-33-41.jpg" alt="AmazingBnB">
         </div>
       </div>
-      <div class="specials">
+      <!-- <div class="specials">
         <h2 class="titleCard">Specials</h2>
         <div class="banner" style="background-image: url(https://windybot.com/img/WkrADcYOgv2nxtsdV0az.jpg);">
           <div style="color: aliceblue; padding-top: 50px;">
@@ -65,7 +67,7 @@
             </a></p>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="services">
         <!-- START SERVICES DISPLAY CONTAINER -->
         <h2 class="titleCard" style="margin-top: 100px;">Services</h2>
@@ -92,7 +94,6 @@
               <img src="/images/360_F_144248813_1PduH2CEnX2mdR9UpVNerzZs6Kv64qsw.jpg" alt="Service2" style="width:100%;">
               <div class="container">
                 <h2>Body Hair Removal</h2>
-                <p style="color: red;">DUE TO RELIGIOUS RESTRICTIONS BODY WAXING IS LIMITED TO FEMALE CLIENTS ONLY</p>
                 <p>We offer body waxing services for target areas. 
                   The service is made painless with our high quality wax and experienced beuticians who prioritize client comfort. 
                   Click below to read more or scroll down to see reviews  from satisfied clients!</p>
@@ -110,7 +111,7 @@
               <div class="container">
                 <h2>Beauty Services</h2>
                 <p>We offer a wide range of other beauty services such as; 
-                  facials, eyebrow tinting, eyelash tinting, eyelash extensions, eyelash lift, eyebrow lamination, and more! 
+                  facials, eyebrow tinting, eyelash tinting, eyelash lift, eyebrow lamination, and more! 
                   Our experienced team guarantees high quality materials and service, with reviews raving about leaving with satisfactory results and no negative skin reactions. 
                   Click below to read more or scroll down to see reviews  from satisfied clients!</p>
                 <p>$20 - 70</p>
