--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: lightgray; margin: 0;">
+  <body style="background-color: #d1d6c6; margin: 0;">
     <main>
       <div class="topBar">
         <a href="tel:5869326300" class="smallContact">
-          <i class="fa fa-phone" style="padding-top: 15px;" aria-hidden="true"></i> 
+          <i class="fa fa-phone" aria-hidden="true"></i> 
           (586) 932-6300 &emsp;
         </a>
         <a class="smallContact" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
+        <!-- <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a> -->
         <div class="header-right">
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
@@ -32,11 +32,11 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: grey;">
+      <div class="introIMG" style="background-color: #6f7065;">
         <h1 class="introText" style="color: #68b701;">Contact Us</h1>
       </div>
-      <div class="storeHours">
-        <h3 style="text-align: center;">STORE HOURS</h3>
+      <div class="storeHours" style="padding-bottom: 100px;">
+        <h1 class="titleCard">Hours</h1>
         <table style=" margin: 0 auto; text-align: left; border-spacing: 10px;">
           <tr>
             <td>Monday:</td>
@@ -68,8 +68,8 @@
           </tr>
         </table>
       </div>
-      
-      <div class="contactimg" style="padding-top: 100px; padding-bottom: 100px;">
+      <h1 class="titleCard">Contact</h1>
+      <div class="contactimg" style="padding-bottom: 100px;">
         <div class="text" style="width: 100%; padding-bottom: 20px;">
           <h3>Call us at</h3>
           <a href="tel:5869326300" style="text-decoration: none; color: #68b701;">(586) 932-6300</a>
