need instagram link

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #d1d6c6; margin: 0;">
+  <body>
     <main>
       <div class="topBar">
         <a href="tel:5869326300" class="smallContact">
@@ -82,16 +82,16 @@
       </div>
       <div class="bottomBar">
         <div class="bottomInfo"> 
-          <p>ABOUT US</p>
-          <div style="color: white; text-align: center;">
-            <span style="display: inline-block; max-width: 250px;">
+          <p class="bottomTitle">ABOUT US</p>
+          <div style="color: white;">
+            <span style="display: inline-block;">
               We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more. Our team is prepared to sit you down 
               with comfort and send you off with confidence.
             </span>
           </div>
         </div>
         <div class="bottomInfo"> 
-          <p>OUR SERVICES</p>
+          <p class="bottomTitle">OUR SERVICES</p>
           <span style="color: white;">
             <li>Threading</li>
             <li>Waxing</li>
@@ -103,13 +103,16 @@
           </span>
         </div>
         <div class="bottomInfo"> 
-          <p>CONTACT</p>
+          <p class="bottomTitle">CONTACT</p>
           <span>
             <a href="tel:5869326300" style="text-decoration: none; color: white;">(586) 932-6300</a>
             <h3> </h3>
             <a style="text-decoration: none; color: white;" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
           </span>
         </div>
+      </div>
+      <div class="selfPromo">
+        Developed by <a href="https://npaddle.github.io/" target="_blank" style="color: #68b701; text-decoration: none;">Niki Patel</a>
       </div>
     </main>
     <script src="index.js"></script>
