--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #d1d6c6; margin: 0;">
+  <body>
     <main>
       <div class="topBar">
         <a href="tel:5869326300" class="smallContact">
@@ -36,6 +36,22 @@
         <h1 class="introText" style="color: #68b701;">Services</h1>
       </div>
       <h1 class="titleCard">Here's What We Offer</h1>
+
+
+      <div class="image-container"> 
+        <div class="image-item"> 
+            <img src="/images/IMG_0387.jpeg" alt="Image 1"> 
+            <p class="imgDisc">Eyebrow lamination before and after</p> 
+        </div> 
+        <div class="image-item"> 
+            <img src="/images/IMG_3743.png" alt="Image 2"> 
+            <p class="imgDisc">Lash tinting before and after</p> 
+        </div> 
+        <div class="image-item"> 
+            <img src="/images/IMG_5474.jpeg" alt="Image 3"> 
+            <p class="imgDisc">Eyebrow shaping and tinting before and after</p> 
+        </div> 
+    </div> 
 
 <!-- FACE THREADING -->
       <div class="cont">
@@ -354,99 +370,174 @@
           <div class="service-details">
             <div class="service">
               <div class="service-info">
+                <h2>Face Cleanup</h2>
+                <p>Includes deep double cleansing , toning , followed by ideal moisturizer.</p>
+              </div>
+              <p class="price">$20</p>
+            </div>
+            <div class="service">
+              <div class="service-info">
                 <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <p>Instant glow and quick replenish. Mini facial includes deep cleansing, toning,
+                  exfoliating, steam, and mask followed by ideal moisturizer.</p>
               </div>
               <p class="price">$45</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Basic Facial</h2>
+                <p>A great introduction to skin care. Improves the level of hydration and restores
+                  balance of skin. Basic facial includes pre-cleanse, deep pore cleansing, exfoliation,
+                  massage, and mask followed by ideal moisturizer.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$50</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Fruit Facial</h2>
+                <p>A extraordinary blend of natural fruit juices tirelessly brightens your skin,
+                  effectively removing tan and revealing a mesmerizing glow. The luxurious
+                  depigmentation face pack effortlessly lightens and brightens your skin, helping to
+                  prevent pigmentation. This facial includes pre-cleanse, deep pore cleansing,
+                  exfoliation, massage, and mask followed by ideal moisturizer.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$50</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Herbal Facial</h2>
+                <p>Herbal facials are unquestionably well-explored if you are trying to improve the
+                  health of your skin naturally and enjoy a moment of relaxation amid the hustle of
+                  everyday living. So, reward yourself with the benefits of herbal facial and bring
+                  out your inner bright beauty. This facial includes pre-cleanse, deep pore cleansing,
+                  exfoliation, extraction, massage, and mask followed by ideal moisturizer.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$55</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Custom Blend Facial</h2>
+                <p>There's no facial more personalized than this. A thorough SkinReading will
+                  identify your unique concerns, followed by invigorating cleansing, tailored
+                  exfoliation and aromatherapeutic facial massage, plus a power treatment and
+                  mask custom blended in-treatment with concentrated ingredients to target your
+                  skin's individual needs. In two corrective activity tiers designed to deliver
+                  personalized results with increasing levels of active enzymes.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Adolescent + Tween Facial</h2>
+                <p>Designed for adolescent skin, to target stress-related breakouts, congestion and
+                  dullness. With deep cleansing, gentle extraction of unwanted blemishes, and a
+                  stress-relieving Massage, it's a perfect introduction to start healthy skin care
+                  habits and embrace your skin through the teen years and beyond. In two
+                  corrective activity tiers designed to deliver personalized results with increasing
+                  levels of active enzymes.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Barrier Repair + Relax Facial</h2>
+                <p>Designed for skin that's stressed or delicate, this corrective facial triple-targets
+                  sensitivities, and nourishes skin's barrier with active strengtheners - In two
+                  corrective activity tiers designed to deliver personalized results with increasing
+                  levels of active enzymes.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Firm + Lift Facial</h2>
+                <p>Lifts and sculpts the look of aging, sagging skin with a gravity-defying clinical
+                  power mask, plus youth-renewing massage movements to target dermal tissue,
+                  aid toxin removal, and increase lymphatic activity. In two corrective activity tiers
+                  designed to deliver personalized results with increasing levels of active enzymes.
+                  Recommended to be experienced in a facial series for optimal visible results.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Oxygen Glow Facial</h2>
+                <p>A purifying treatment to renew skin that's dull, tired, sluggish, clogged or
+                  prematurely aging - with a triple oxygenating complex designed to amplify
+                  cellular respiration. In three corrective activity tiers designed to deliver
+                  personalized results with increasing levels of exfoliation.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Acne-Clearing Facial</h2>
+                <p>An absolute must if you're breakout prone or have clogged pores or blackheads.
+                  You'll receive a personal skin assessment followed by deep pore cleansing,
+                  exfoliating and medicated amino-mask that contains enzymes, antioxidants,
+                  antiseptic and anti-inflammatory ingredients. Make this effective treatment a part
+                  of your continuing fights against acne.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$70</p>
             </div>
             <div class="service">
               <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
+                <h2>Back Facial</h2>
+                <p>Treat your back to a cleansing, soothing message, exfoliating, steam and mask,
+                  blackheads extraction. We came across to make your back perfect for summer or
+                  any time of the year. Great for those who suffer from back acne.</p>
               </div>
-              <p class="price">$45</p>
+              <p class="price">$65</p>
             </div>
-            <div class="service">
-              <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
-              </div>
-              <p class="price">$45</p>
-            </div>
-            <div class="service">
-              <div class="service-info">
-                <h2>Mini Facial</h2>
-                <p>DEETS</p>
-              </div>
-              <p class="price">$45</p>
-            </div>
-            
 
 
 
+            <div class="cont">
+              <div class="service-box">
+                <div class="service-header">
+                  <h1>Facial Add Ons</h1>
+                  <p class="subtitle">Additional treatements that you can add on to your facial!</p>
+                </div>
+                <div class="service-details1">
+                  <div class="service">
+                    <div class="service-info">
+                      <h2>Eye Treatement</h2>
+                      <p>It will help to reduce the appearance of fine lines and wrinkle around the eyes,
+                        reduce dark circle and restore the volume under eyes which can make skin firmer.</p>
+                    </div>
+                    <p class="price">$10</p>
+                  </div>
+                  <div class="service">
+                    <div class="service-info">
+                      <h2>Firming Neck + Chest</h2>
+                      <p>Add on enhancement for loss of elasticity, Iines + wrinkles, or rough texture on
+                        the neck and chest.</p>
+                    </div>
+                    <p class="price">$15</p>
+                  </div>
+                  <div class="service">
+                    <div class="service-info">
+                      <h2>Microdermabrasion</h2>
+                      <p>It can improve the appearance of the skin by removing the top layer of the skin
+                        and revealing healthier smoother skin.
+                        It improves skin texture and tone and stimulating collagen production, replacing
+                        old cells with new healthier, reduce appearance of enlarge pores and blackheads,
+                        treat sun damage and skin discoloration.</p>
+                    </div>
+                    <p class="price">$19</p>
+                  </div>
+                  <div class="service">
+                    <div class="service-info">
+                      <h2>Triple Corrective Arms + Hands Treatment</h2>
+                      <p>For hands + arms that are rough, dry, or prematurely aged. A potent enzyme +
+                        exfoliating mask reverses years of damage from the elbows to fingertips - for skin
+                        that's smoother, brighter and younger-looking.</p>
+                    </div>
+                    <p class="price">$20</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -455,9 +546,8 @@
       <div class="cont">
         <div class="service-box">
           <div class="service-header">
-            <h1>Beauty Services</h1>
-            <p class="subtitle">Other services include eyebrow tinting, eyebrow lamination, 
-              eyelash tinting, eyelash lift, and fake eyelashes.</p>
+            <h1>Tinting</h1>
+            <p class="subtitle">Tinting services for both eyebrows and eyelashes.</p>
             <p>Click to see more details</p>
           </div>
           <div class="service-details">
@@ -479,6 +569,18 @@
               </div>
               <p class="price">$53</p>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cont">
+        <div class="service-box">
+          <div class="service-header">
+            <h1>Lashes</h1>
+            <p class="subtitle">Choose from our eyelash services to give your eyelashes a fuller and longer appearance.</p>
+            <p>Click to see more details</p>
+          </div>
+          <div class="service-details">
             <div class="service">
               <div class="service-info">
                 <h2>Full Look Eyelashes</h2>
@@ -509,6 +611,19 @@
               </div>
               <p class="price">$90</p>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cont">
+        <div class="service-box">
+          <div class="service-header">
+            <h1>Brow Lamination</h1>
+            <p class="subtitle">A semi-permanent treatment that uses a chemical solution to lift and set your brow hairs in place, 
+              creating a fuller, more defined look.</p>
+            <p>Click to see more details</p>
+          </div>
+          <div class="service-details">
             <div class="service">
               <div class="service-info">
                 <h2>Eyebrow Lamination</h2>
@@ -525,24 +640,37 @@
         </div>
       </div>
 
-
-
-
-
+      <div class="cont">
+        <div class="service-box">
+          <div class="service-header">
+            <h1>Henna Tattoo</h1>
+            <p class="subtitle">A temporary body tattoo that uses a natural dye to create designs on the skin.</p>
+            <p>Click to see more details</p>
+          </div>
+          <div class="service-details">
+            <div class="service">
+              <div class="service-info">
+                <h2>Henna Tattoo</h2>
+              </div>
+              <p class="price">$10+</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
       <div class="bottomBar">
         <div class="bottomInfo"> 
-          <p>ABOUT US</p>
-          <div style="color: white; text-align: center;">
-            <span style="display: inline-block; max-width: 250px;">
+          <p class="bottomTitle">ABOUT US</p>
+          <div style="color: white;">
+            <span style="display: inline-block;">
               We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more. Our team is prepared to sit you down 
               with comfort and send you off with confidence.
             </span>
           </div>
         </div>
         <div class="bottomInfo"> 
-          <p>OUR SERVICES</p>
+          <p class="bottomTitle">OUR SERVICES</p>
           <span style="color: white;">
             <li>Threading</li>
             <li>Waxing</li>
@@ -554,15 +682,17 @@
           </span>
         </div>
         <div class="bottomInfo"> 
-          <p>CONTACT</p>
+          <p class="bottomTitle">CONTACT</p>
           <span>
             <a href="tel:5869326300" style="text-decoration: none; color: white;">(586) 932-6300</a>
             <h3> </h3>
             <a style="text-decoration: none; color: white;" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
           </span>
         </div>
+      </div> 
+      <div class="selfPromo">
+        Developed by <a href="https://npaddle.github.io/" target="_blank" style="color: #68b701; text-decoration: none;">Niki Patel</a>
       </div>
-      <script src="script.js"></script>    
     </main>
     <script src="index.js"></script>
   </body>
